# Raytrace

./: .gitignore  AGENTS.md  pyproject.toml  setup.py
.github/prompts/: setting.prompt.md
raytrace/: __init__.py  projector.py  raytrace_ext.pyx  torch_native.py
raytrace/src/: geometry.cu  geometry.cuh  raytrace.cu  raytrace.h
raytrace/torch_ext/: raytrace_torch.cc  raytrace_torch_kernel.cu
test/: demo_batch_ct_projector.py  demo_static_ct_raytrace.py  test.py  visualize_batch_projections.py
