[build-system]
requires = ["setuptools", "wheel", "Cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "raytrace"
version = "1.5"
description = "General purpose python ray tracing library implemented in on GPU in CUDA as a Cython extension"
authors = [
    {name = "Ryan Neph", email = "neph320@gmail.com"}
]
dependencies = [
    "numpy",
]
requires-python = ">=3.8"
